adding a query to a table is finalized
